--- a/Week1A1/index.html
+++ b/Week1A1/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>jQuery Ajax - load()</title>
+<title>Week1A1-Tru Dinh</title>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript">
      $(document).ready (function() {          
